--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
-        hoo haw hee hee
+        <h5>Raycast</h5>
+        [Demo](https://longwatermelon.github.io/raycast-web) [Source](https://github.com/longwatermelon/raycast)
     </head>
 </html>
