--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
         <h5>Raycast</h5>
-        [Demo](https://longwatermelon.github.io/raycast-web) [Source](https://github.com/longwatermelon/raycast)
+        <a href="https://longwatermelon.github.io/raycast-web">Demo</a>
     </head>
 </html>
