--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <h5>Raycast</h5>
         <a href="https://longwatermelon.github.io/raycast-web">Demo</a>
+        <a href="https://github.com/longwatermelon/raycast">Source</a>
     </head>
 </html>
 
