--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
         <h3>Raycast</h3>
-        <a href="https://longwatermelon.github.io/raycast-web">Demo</a>
+        <a href="https://longwatermelon.github.io/raycast-web">Web demo</a>
         <a href="https://github.com/longwatermelon/raycast">Source</a>
+        
+        <h3>3D Tetris</h3>
+        <a href="https://longwatermelon.github.io/tetris-web">Web demo</a>
+        <a href="https://github.com/longwatermelon/tetris-3d">Source</a>
     </head>
 </html>
 
