--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <h3>3D Tetris</h3>
         <a href="https://longwatermelon.github.io/tetris-web">Web demo</a>
         <a href="https://github.com/longwatermelon/tetris-3d">Source</a>
+        
+        <h3>Voxel space</h3>
+        <a href="https://longwatermelon.github.io/voxel-space-web">Web demo</a>
+        <a href="https://github.com/longwatermelon/voxel-space">Source</a>
     </head>
 </html>
 
