--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
     <head>
         <h3>Raycast</h3>
-        <a href="https://longwatermelon.github.io/raycast-web">Web demo</a>
-        <a href="https://github.com/longwatermelon/raycast">Source</a>
+        <a href="https://longwatermelon.github.io/raycast-web" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/raycast" target="_blank">Source</a>
         
         <h3>3D Tetris</h3>
-        <a href="https://longwatermelon.github.io/tetris-web">Web demo</a>
-        <a href="https://github.com/longwatermelon/tetris-3d">Source</a>
+        <a href="https://longwatermelon.github.io/tetris-web" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/tetris-3d" target="_blank">Source</a>
         
         <h3>Voxel space</h3>
-        <a href="https://longwatermelon.github.io/voxel-space-web">Web demo</a>
-        <a href="https://github.com/longwatermelon/voxel-space">Source</a>
+        <a href="https://longwatermelon.github.io/voxel-space-web" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/voxel-space" target="_blank">Source</a>
     </head>
 </html>
 
