--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h3>Voxel space</h3>
         <a href="https://longwatermelon.github.io/voxel-space-web" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/voxel-space" target="_blank">Source</a>
+        
+        <h3>Spherefield</h3>
+        <a href="https://longwatermelon.github.io/spherefield-web" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/spherefield" target="_blank">Source</a>
     </head>
 </html>
 
