--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <a href="https://longwatermelon.github.io/tetris-web" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/tetris-3d" target="_blank">Source</a>
         
+        <h3>3D Pacman</h3>
+        <a href="https://longwatermelon.github.io/pac3d-web" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/pacman-3d" target="_blank">Source</a>
+        
         <h3>Voxel space</h3>
         <a href="https://longwatermelon.github.io/voxel-space-web" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/voxel-space" target="_blank">Source</a>
