--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <a href="https://longwatermelon.github.io/pac3d-web" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/pacman-3d" target="_blank">Source</a>
         
+        <h3>3D Chess</h3>
+        <a href="https://longwatermelon.github.io/chess-3d" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/chess-3d" target="_blank">Source</a>
+        
         <h3>Voxel space</h3>
         <a href="https://longwatermelon.github.io/voxel-space-web" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/voxel-space" target="_blank">Source</a>
