--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <h3>Spherefield</h3>
         <a href="https://longwatermelon.github.io/spherefield-web" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/spherefield" target="_blank">Source</a>
+        
+        <h3>LaTeX clone</h3>
+        <a href="https://longwatermelon.github.io/acrylic" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/acrylic" target="_blank">Source</a>
     </head>
 </html>
 
