--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <h3>LaTeX clone</h3>
         <a href="https://longwatermelon.github.io/acrylic" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/acrylic" target="_blank">Source</a>
+        
+        <h3>Anarchy chess</h3>
+        <a href="https://longwatermelon.github.io/anarchychess" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/anarchychess" target="_blank">Source</a>
     </head>
 </html>
 
