--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <a href="https://github.com/longwatermelon/rasterize" target="_blank">Source</a>
         
         <h3>Raycast</h3>
-        <a href="https://longwatermelon.github.io/raycast-web" target="_blank">Web demo</a>
+        <a href="https://longwatermelon.github.io/raycast" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/raycast" target="_blank">Source</a>
         
         <h3>3D Tetris</h3>
