--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <h3>Anarchy chess</h3>
         <a href="https://longwatermelon.github.io/anarchychess" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/anarchychess" target="_blank">Source</a>
+        
+        <h3>Fourier series tracer</h3>
+        <a href="https://longwatermelon.github.io/fourier-draw" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/fourier-draw" target="_blank">Source</a>
     </head>
 </html>
 
