--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <h3>Fourier series tracer</h3>
         <a href="https://longwatermelon.github.io/fourier-draw" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/fourier-draw" target="_blank">Source</a>
+
+        <h3>Fourier transform visualization</h3>
+        <a href="https://longwatermelon.github.io/ft-visualization" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/ft-visualization" target="_blank">Source</a>
     </head>
 </html>
 
