--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <h3>Fourier transform visualization</h3>
         <a href="https://longwatermelon.github.io/ft-visualization" target="_blank">Web demo</a>
         <a href="https://github.com/longwatermelon/ft-visualization" target="_blank">Source</a>
+
+        <h3>HWTeX</h3>
+        <a href="https://longwatermelon.github.io/hwtex" target="_blank">Web demo</a>
+        <a href="https://github.com/longwatermelon/hwtex" target="_blank">Source</a>
     </head>
 </html>
 
