--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         <h3>Raycast</h3>
         <a href="https://longwatermelon.github.io/raycast" target="_blank">Web demo</a>
-        <a href="https://github.com/longwatermelon/raycast" target="_blank">Source</a>
+        <a href="https://github.com/longwatermelon/raycast" target="_blank">Source</a><br>
         <a href="https://longwatermelon.github.io/raycast-rs" target="_blank">Alt web demo</a>
         <a href="https://github.com/longwatermelon/raycast-rs" target="_blank">Alt source</a>
         
